Deployment-Strategies/ab-testing/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: mywebserver
spec:
  replicas: 6
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxSurge: 1
      maxUnavailable: 1
  selector:
    matchLabels:
      app: nginx
  template:
    metadata:
      labels:
        app: nginx
    spec:
      containers:
      - image: chakilams3/k8sdemo:webv2
        name: nginx
        readinessProbe:
          httpGet:
            path: /
            port: 80
            httpHeaders:
            - name: Host
              value: K8sProbe
