Deployment-Strategies/ab-testing/DestinationRule.yaml
apiVersion: networking.istio.io/v1alpha3
kind: DestinationRule
metadata:
  name: canary-test
spec:
  host: payment.robot-shop.svc.cluster.local
  subsets:
  - name: production
    labels:
      stage: prod
  - name: canary
    labels:
      stage: test
